# DBlabs

./: readme.md
lab1_1/: 5mil.sql  CMakeLists.txt  data_base_generator.cpp  readme.md  test_indexes.cpp
